# Giftschart

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  INLINE_MODE_EXPLANATION.md  LICENSE  Makefile  README.md  aggressive_cdn_scrape.py  aggressive_cdn_smart_scrape.py  apply_cdn_fixes.py  arrange_downloaded_stickers.py  bot_config.py  callback_handler.py  cdn_fixes.py  cdn_server.py  check_missing_assets.py  convert_png_to_webp.py  discover_collection_ids.py  discover_goodies_mrkt.py  discover_goodies_search_api.py  discover_new_ids.py  docker-compose.yml  download_goodies_assets.py  download_missing_stickers.py  download_plus_premarket_gifts.py  download_remaining_thumbnails_mrkt.py  ecosystem.config.js  fetch_all_mrkt_data.py  fetch_new_premarket_prices.py  fetch_sticker_prices.py  find_missing_goodies_ids.py  find_missing_thumbnails.py  generate_all_plus_premarket_cards.py  generate_all_sticker_price_cards.py  generate_log.txt  generate_mrkt_token.py  (+56 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: code-quality.yml  docker-build.yml  python-tests.yml  security-scan.yml
api/: .env.example  requirements.txt
api/mrkt/: compare_mrkt.py  convert_images.py  download_gifts_json.py  download_missing_images.py  extract_id_gifts.py  gifts_collections.json  id_gifts_mapping.json  manual_gen.py  mrkt_bot.py  setup_mrkt_session.py  test_fresh_mrkt_auth.py  test_mrkt_auth.py
api/quant/: clean_unique_gifts.json  filter_unique_gifts.py  quant_api_gifts.json  (+7 more)
card_metadata/: Case_metadata.json  Swag_Bag_metadata.json
config/: __init__.py  paths.py
core/: bot_config.py  callback_handler.py  premium_system.py  rate_limiter.py  start_bot.py  supabase_client.py  telegram_bot.py
data/: cdn_requirements.txt
docs/: CLEANUP_SUMMARY.md  NETWORK_ISSUE_DIAGNOSIS.md  PROJECT_STRUCTURE.md  README.md  SECURITY_AUDIT.md  SECURITY_FIXES_APPLIED.md  SECURITY_FIXES_NEEDED.md
generators/: generate_all_stickers.py  generate_sticker_price_card.py  gift_card_generator.py  goodies_price_card_generator.py  live_price_card.py  plus_premarket_card_generator.py  pregenerate_gift_cards.py  sticker_price_card_generator.py
schedulers/: run_supabase_backup.py  scheduled_sticker_update.py  sticker_updater.py  supabase_backup_sync.py  update_sticker_prices.py
services/: cdn_server.py  mrkt_api.py  mrkt_quant_api.py  portal_api.py  premarket_gifts.py  sticker_integration.py  tonnel_api.py
tests/: README.md  __init__.py  test_gift_cards.py  test_rate_limiter.py  test_sticker_integration.py
utils/: advanced_analytics.py  generate_session_string.py  image_uploader.py  visual_analytics.py
(+50 files in other folders)
